--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-  "name": "react-app-boilerplate",
-  "version": "2.2.2",
-  "description": "React application boilerplate",
-  "author": "Christian Alfoni",
+  "name": "reactjs-boilerplate",
+  "version": "0.0.5",
+  "description": "React application boilerplate using gulp",
+  "author": "Martin Somers",
   "license": "ISC",
   "devDependencies": {
-    "browserify": "^6.2.0",
-    "glob": "^4.0.6",
-    "gulp": "^3.8.9",
-    "gulp-concat": "^2.3.4",
-    "gulp-cssmin": "^0.1.6",
-    "gulp-if": "^1.2.4",
-    "gulp-livereload": "^2.1.1",
-    "gulp-notify": "^1.4.2",
+    "browserify": "^8.0.2",
+    "glob": "^4.3.2",
+    "gulp": "^3.8.10",
+    "gulp-concat": "^2.4.3",
+    "gulp-cssmin": "^0.3.11",
+    "gulp-if": "^1.2.5",
+    "gulp-livereload": "^3.0.2",
+    "gulp-notify": "^2.1.0",
     "gulp-streamify": "0.0.5",
-    "gulp-uglify": "^0.3.1",
-    "gulp-util": "^3.0.0",
-    "gulp-jasmine2-phantomjs": "^0.1.1",
-    "gulp-shell": "^0.2.10",
-    "phantomjs": "^1.9.12",
+    "gulp-uglify": "^1.0.2",
+    "gulp-util": "^3.0.1",
+    "gulp-jasmine2-phantomjs": "^0.2.0",
+    "gulp-shell": "^0.2.11",
+    "phantomjs": "^1.9.13",
     "react-addons": "^0.9.0",
-    "reactify": "^0.15.2",
-    "vinyl-source-stream": "^0.1.1",
+    "reactify": "^0.17.1",
+    "vinyl-source-stream": "^1.0.0",
     "watchify": "^2.1.1"
   },
   "dependencies": {
-    "react": "^0.12.0"
+    "react": "^0.12.2"
   }
 }
