package.json file updated to latest versions

--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "React application boilerplate using gulp",
   "author": "Martin Somers",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/sononix/reactjs-boilerplate.git"
+
+  },
   "devDependencies": {
     "browserify": "^8.0.2",
     "glob": "^4.3.2",
     "gulp": "^3.8.10",
     "gulp-concat": "^2.4.3",
-    "gulp-cssmin": "^0.3.11",
+    "gulp-cssmin": "^0.1.6",
     "gulp-if": "^1.2.5",
     "gulp-livereload": "^3.0.2",
     "gulp-notify": "^2.1.0",
