--- a/package.json
+++ b/package.json
@@ -7,22 +7,22 @@
   "repository": {
     "type": "git",
     "url": "git://github.com/sononix/reactjs-boilerplate.git"
-
   },
   "devDependencies": {
     "browserify": "^8.0.2",
     "glob": "^4.3.2",
     "gulp": "^3.8.10",
     "gulp-concat": "^2.4.3",
+    "gulp-connect": "^2.2.0",
     "gulp-cssmin": "^0.1.6",
     "gulp-if": "^1.2.5",
+    "gulp-jasmine2-phantomjs": "^0.2.0",
     "gulp-livereload": "^3.0.2",
     "gulp-notify": "^2.1.0",
+    "gulp-shell": "^0.2.11",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.0.2",
     "gulp-util": "^3.0.1",
-    "gulp-jasmine2-phantomjs": "^0.2.0",
-    "gulp-shell": "^0.2.11",
     "phantomjs": "^1.9.13",
     "react-addons": "^0.9.0",
     "reactify": "^0.17.1",
